--- a/全栈/安全.md
+++ b/全栈/安全.md
@@ -4,17 +4,298 @@
 
 ## 什么是帆布指纹？
 
+**目标**：追踪用户
+
+**背景**：移动互联网 IP 经常变化，用户禁用 cookie
+**解决：**
+
+- Canvas Fingerprinting
+  - 不通过 cookie
+  - 用户不易屏蔽
+
+    手写代码
+
+    ```js
+    const canvas = document.createElement('canvas')
+    const ctx = canvas.getContext('2d')
+    const txt = 'canvasfingerprinting'
+    ctx.fillText(txt, 0, 0)
+    const b64 = canvas.toDataURL().replace('data:image/png;base64,', '') // 返回一个包含图片的 data URI，并替换 Mine-type，返回 base64 编码
+    const bin = atob(b64) // 函数能够解码 base64 编码的字符串数据
+    const canvasFingerprinting = bin2hex(bin.slice(-16, -12)) // 将 Unicode 编码转为十六进制
+    ```
+
+- fingerprintJS2 / fingerprintJS
+
+  除 canvas 外，加入其它影响因素：
+
+  - navigator.userAgent 用户代理
+  - navigator.language 用户语言
+  - screen.colorDepth 屏幕色彩信息
+  - screen.height / screen.width 屏幕宽度和高度
+  - Date().getTimezoneOffset() 格林威治时间与本地时间时差
+  - seesionStorage 是否支持 sessionStorage
+  - localStorage 是否支持 localStorage
+  - indexedDB 是否支持 indexedDB
+  - addBehavior 是否支持 document.body.addBehavior IE5 属性
+  - openDatabase 是否支持调用本地数据库
+  - cpuClass 浏览器所在系统的 CPU 等级
+  - navigator.platform 客户端操作系统
+  - doNotTrack 是否支持 Do not track 功能
+  - Flash plugin / Adobe PDF reader / QuickTime / Real players / ShockWave player / Windows media player / Silverlight / Skype
+
 ## 对比各种分布式 ID 的生成方式？
+
+### UUID
+
+- 生成简单，本地生成
+- 无序无定义
+
+### 数据库自增ID
+
+- `auto_increment`实现简单，单调自增，查询快
+- 数据库服务宕机风险
+  - 使用SELECTLAST_INSERT_ID()代替max(id)提高高并发时的查询效率
+  - 不同数据库服务设置不同自增初始值和步长
+
+### 数据库自增ID段
+
+```sql
+CREATE TABLE ids_increment (
+  type int(8) NOT NULL COMMENT '业务类型',
+  max_id int(8) NOT NULL COMMENT '当前业务的最大ID',
+  step int(8) NOT NULL COMMENT '当前业务的ID段步长',
+  version ini(8) NOT NULL COMMENT '当前业务的版本号，每次分配 +1，乐观锁'
+)
+```
+
+### Redis
+
+- set 字段的初始值 incr 该字段，每次 +1
+- 使用 RDB 定时持久化
+- 使用 AOF 命令持久化
+
+### 雪花算法
+
+64 位 ID：符号位（1 位） + 时间戳（41 位） + 机器 ID（5 位） + 数据中心 ID（5 位）+ 自增值（12 位）
 
 ## 列举各种跨域方法
 
+跨域：协议、端口、域名不同，需要跨域
+
+### 跨域解决方案 [juejin](https://juejin.cn/post/6844903767226351623)
+
+- [JSONP](https://zh.wikipedia.org/wiki/JSONP) (JSON with Padding)
+  - script标签没有同源限制
+  - 服务器返回页面上callback包裹的json数据
+  - 兼容性好
+  - 仅支持GET
+- CORS (Cross-origin-resource-sharing)跨域资源共享
+  - 简单请求，需满足以下两个条件：
+    - GET HEAD POST
+    - Content-Type
+      - text/plain
+      - multipart/form-data
+      - application/x-www-form-urlencoded
+  - 复杂请求：不满足以上条件
+    - 复杂请求的CORS请求，会在正式通信之前，增加一次HTTP查询请求，称为"预检"请求,该请求是 option 方法的，通过该请求来知道服务端是否允许跨域请求。
+- postMessage
+  - window属性
+  - 跨窗口，跨框架iframe、frame，跨域
+  - 允许不同源脚本采用异步方式进行通信
+- document.domain
+  - 主域名相同，子域名不同
+  - 设置值为主域名
+- window.name
+  - 不超过 2MB
+    - 同一个iframe
+    - 加载跨域页，跨域页设置 window.name
+    - 加载同域页，读取 iframe.contentWindow.name
+- location.hash
+  - 不会被 URL 编码
+  - 加载跨域页，参数跟在 # 后。window.onhashchange 监听 hash 变化
+  - 跨域页获取 location.hash，加载同域页，参数跟在 # 后
+  - 同域页设置 window.parent.parent.location.hash = location.hash，将参数回传
+- https.proxy
+- nginx：反向代理
+- websocket
+  - 基于 TCP
+  - 全双工通信
+  - 应用层协议
+
 ## 什么是点击劫持，如何防御 ？
+
+### 点击劫持
+
+点击劫持，通常会使用透明的 `<iframe>` 元素链接被攻击网站，并将其覆盖在恶意页面之上，诱导用户点击恶意页面上某个元素，而实际点击的是被攻击网站的某个元素。引导用户在不知情的情况下，与被攻击网站发生交互，劫持用户的点击、Cookie、以及自动填充的密码或拖拽的文件等
+
+### 如何防御
+
+- 禁止页面被嵌套
+  - 使用JS `if (top != window) top.location = window.location`
+  - 原理 当页面被嵌套时自动跳转到当前页面
+  - 局限性（以下场景失效）：
+    - 禁用JS
+    - 在恶意页面监听onbeforeunload事件，当用户点击否，停止退出
+    - 设置iframe的sandbox属性，将iframe沙箱话，不添加allow-top-navigation，禁止其更改top.location, IE10+兼容
+- X-frame-Options
+  - 原理：禁止页面被嵌套，或者设置页面嵌套的策略
+  - 局限性（以下场景失效）
+    - 老版本浏览器不兼容
+    - 善意第三方无法嵌套网页
+- 设置Cookie的SameSite属性
+  - 原理：将iframe嵌入被攻击网页，cookie不会被发送
+    - 值为 Lax 时，当前网页的 top.location.href 与请求 URL 不同域时，除链接、预加载请求、GET表单外，不发送 Cookie
+    - 值为 Strict 时，当前网页的 top.location.href 与请求 URL 不同域时，始终不发送 Cookie
+  - 局限性：
+    - 老版本不兼容
+- 拦截点击
+  - 原理：使用一个透明层，在!top = window时，覆盖整个网页，劫持点击
+  - 局限性：
+    - 禁用js
+    - 影响SEO，可能会被认为故意遮盖主体，作弊
+    - 山一千套也会被拦截
 
 ## 如何提高 iframe 嵌入内容的安全性 ？
 
+- 采取防止点击劫持措施（见上）
+- 设置HTTPS
+  - HTTPS由HTTP+SSL协议构建，可进行加密传输、身份认证，比HTTP安全性高
+  - 现代浏览器安全策略限制下HTTPS下不能使用iframe嵌入HTTP内容
+  - HTTP与HTTPS因协议不同，受同源策略影响
+    - 互相嵌套时，HTTP不能访问HTTPS内容，反之亦然
+    - HTTPS 在 CA 机构签发证书时，需要验证域名所有权，伪造 HTTPS 同域几乎不可能
+- 设置sandbox值，使用运行iframe
+  - 默认不设置具体值，即开启所有限制
+  - 每一项限制用半角空格分隔
+    - allow-downloads-without-user-activation 用户未激活时可以启动下载
+    - allow-forms 允许提交表单
+    - allow-modals 允许模态框
+    - allow-orientation-lock 允许方向锁定
+    - allow-pointer-lock 允许嵌入内容使用 Pointer Lock API 锁定指针
+    - allow-popups 允许 window.open 弹窗
+    - allow-popups-to-escape-sandbox 允许弹窗不受沙箱限制
+    - allow-presentation 允许嵌入内容使用 Presentation API
+    - allow-same-origin 不打开该项限制，所有加载网页视为跨域
+    - allow-scripts 允许嵌入内容允许非弹窗外的脚本，与 allow-same-origin 一起使用，存在安全风险，即嵌入网页可能可以设置或删除 sandbox 属性
+    - allow-storage-access-by-user-activation 用户激活时嵌入内容可通过 Storage Access API 访问父窗口的 Storage
+    - allow-top-navigation 允许嵌入内容修改父窗口 top.location
+    - allow-top-navigation-by-user-activation 用户激活时，允许嵌入内容修改父窗口top.location
+- 配置 CSP 内容安全策略
+  - 策略 policy 可以配置在响应头 Content-Security-Policy
+  - 策略 policy 可以配置在 meta 标签 http-equiv="Content-Security-Policy"
+  - 策略类型
+    - default-src 默认策略，没有配置后面的策略时，采用的策略，必须
+    - img-src 图片策略
+    - media-src 多媒体策略
+    - script-src 脚本策略
+    - style-src 样式策略
+    - font-src 字体策略
+    - object-src 插件策略
+    - child-src 框架
+    - connect-src HTTP 连接策略
+    - workder-src Worker 脚本策略
+    - manifest-src Manifest 策略
+    - prefetch-src 预加载或预渲染策略
+  - 策略值
+    - self 同源策略，关键字，用引号包裹
+    - none 禁止加载任何外部资源，关键字，用引号包裹
+    - 域名，泛域名（支持 * 通配符），网址（含协议头 http:// 或 https:// )，路径名，协议名
+    - report-uri + 网址，向指定 URL 发送违例报告
+      - 调试时，可以将策略 policy 配置到 Content-Security-Policy-Report-Only 响应头，只报告不应用策略
+    - script-src 关键字，用引号包裹
+      - unsafe-inline 允许 `<script>` 标签和事件监听函数
+      - unsafe-eval 允许将字符串作代码执行，包含使用 eval Function setTimeout setInterval 函数
+      - nonce-{token} 允许 `<script nonce={token}></script>` 中代码执行
+      - {hash} 允许 `<script>` 中的 {hash} 值相符的代码执行
+
 ## 什么是插件，为什么要使用 Web 技术代替插件 ？
 
+### 什么是插件
+
+插件，英文名为 plugin-in、plugin、add-in、addin、add-on、addon、extension。
+
+插件是一种应用程序，通过应用程序自身与用户交互，为应用程序增加所需要的特定功能，减少应用程序自身的体积。
+
+插件运行依赖于应用程序提供服务、接口，必须加载到应用程序或网络传输协议中，与应用程序交换数据。
+
+应用程序本身不依赖于插件，可以独立运行，插件一般不会更改应用程序自身。
+
+区别于插件，拓展不必通过应用程序自身与用户交互，可以有自己的独立界面。
+
+### 对于不同应用场景，插件的意义
+
+- 对于 Web 浏览器来说，插件是能够为浏览器自身无法读取的内容提供访问权限的软件，例如 Flash、PDF 等
+- 对于电子邮件客户端，插件是用来加密和解密的软件
+- 对于绘图软件，插件是用来支持不同文件格式、处理图片、支持自动化批量的软件
+- 对于媒体播放器，插件是用来支持不同媒体格式的软件、提供视觉、音效等增强
+- 对于集成开发环境，插件用来支持不同编程语言、提供文件系统、语法高亮、拼写检查、版本管理、终端等增强
+
+### 为什么要是用Web技术代替插件
+
+- 传统插件因安全隐患、移动端兼容、耗电、内存泄漏问题不再被支持
+  - ActiveX
+  - Flash
+- 信息平等、增强可访问性、利于搜索引擎收录
+  - 通过插件提供访问权限的内容，需要用户安装插件，由于系统、配置、平台和地区等差异，用户能否平等访问信息，受到能否安装，运行插件的限制
+  - 传统插件通过 `<embed> <object>` 等嵌入浏览器，其内容不经特殊处理，无法在源代码中体现，这意味着依赖文档结构的读屏软件、搜索引擎蜘蛛无法读取这部分内容，从而无法正确地这部分内容建立索引，计算权重。这部分内容对于无法阅读或搜索引擎用户就像黑盒一样不可见
+  - Flash: 可以通过为图形元素提供替代文本，允许用户按顺序阅读、键盘控制、提供字幕、控制音频播放、为导航添加说明、避免仅使用颜色区分不同信息等方式来增强可访问性，但不使用 Flash，或者使用 Adobe Animate CC 等按上述原则构建等效 HTML5 方案是更好选择
+- HTML 5、CSS 3+ 模块化标准和 ES 6+
+  - Microsoft Edge、Mozilla Firefox、Google Chrome、Apple Safari、Opera 等都支持 HTML5、CSS 3+ 模块化标准和 ES 6+
+  - 现代浏览器的广泛普及以及自动更新的特性，允许开发者使用 Web 技术支持以前需要使用插件开发的功能
+  - 需要更多本地权限或跨域，可以用 Web 技术实现的扩展或附加组件的形式提供给 Chrome 或 Firefox 等现代浏览器
+  
 ## 什么是内容安全策略（CSP）？
+
+内容安全策略（Content Security Policy）是用于检测并削弱某些特定类型攻击的额外安全层
+
+- 预防跨站脚本攻击（XSS - Cross Site Scripting）
+  - 通过 CSP 设置信任的可执行脚本的来源
+    - 可设置白名单 URL，域名，仅加载 https
+    - 通过 token 或 hash 限制内联脚本等
+- 预防数据包嗅探、中间人攻击和 HTTP 劫持
+
+通过 CSP 设置信任的资源的来源，必须使用 https 协议
+HTTP 超文本传输协议位于 OSI 模型的第 7 层，传输以纯文本形式进行
+HTTP 数据包可以被嗅探，容易遭受中间人攻击
+HTTPS 流量经过加密
+即使嗅探到数据包或者以其他方式截取数据包
+它们也会呈现为无意义的字符
+数据注入攻击
+
+通过 CSP 设置信任的资源的来源
+当数据注入发生后，阻止浏览器加载非法来源的数据
+（2）如何配置内容安全策略（CSP）？
+策略 policy 可以配置在响应头 Content-Security-Policy
+
+策略 policy 可以配置在 meta 标签 http-equiv="Content-Security-Policy"
+
+策略类型
+
+default-src 默认策略，没有配置后面的策略时，采用的策略，必须
+img-src 图片策略
+media-src 多媒体策略
+script-src 脚本策略
+style-src 样式策略
+font-src 字体策略
+object-src 插件策略
+child-src 框架
+connect-src HTTP 连接策略
+workder-src Worker 脚本策略
+manifest-src Manifest 策略
+prefetch-src 预加载或预渲染策略
+策略值
+
+self 同源策略，关键字，用引号包裹
+none 禁止加载任何外部资源，关键字，用引号包裹
+域名，泛域名（支持 * 通配符），网址（含协议头 http:// 或 https:// )，路径名，协议名
+report-uri + 网址，向指定 URL 发送违例报告
+调试时，可以将策略 policy 配置到 Content-Security-Policy-Report-Only 响应头，只报告不应用策略
+script-src 关键字，用引号包裹
+nsafe-inline 允许 `<script>` 标签和事件监听函数
+unsafe-eval 允许将字符串作代码执行，包含使用 eval Function setTimeout setInterval 函数
+nonce-{token} 允许 `<script nonce={token}></script>` 中代码执行
+{hash} 允许 `<script>` 中的 {hash} 值相符的代码执行
 
 ## 什么是 XSS ，如何防范 XSS ？
 
