--- a/全栈/安全.md
+++ b/全栈/安全.md
@@ -317,9 +317,153 @@ CREATE TABLE ids_increment (
 - 存储型/持久型
   - 范围：客户端 + 服务端
   - 攻击方式：设置属性或内容来自数据库或 Web 或 Extension 存储或 Cookie 中，未经过滤和转义，包含 JavaScript 脚本的恶意代码通过 URL 或 Referer 以及用户主动提交等方式传入，并被存入数据库或 Web 或 Extension 存储或 Cookie 中，读取后，被意外执行，轻则影响用户体验，客户端崩溃，重则用户数据被发送，身份被冒充用于滥发消息、投票、转账等进而引发社会工程学相关安全问题
-  - 传递路径：Location 或 Document 接口 或 Socket 接口等其它客户端传递 Message 的途径和用户主动提交 → 服务端 → 数据库 → 客户端 → 客户端
+  - 传递路径：Location 或 Document 接口 或 Socket 接口等其它客户端传递 Message 的途径和用户主动提交 → 服务端 → 数据库 → 客户端 → 客户端；Location 或 Document 接口 或 Socket 接口等其它客户端传递 Message 的途径和用户主动提交 → Web 或 Extension 存储或 Cookie → 客户端
   - 传播方式：寻找过滤和转义缺乏或不完善的提交及展示路径，将恶意 JavaScript 脚本代码经过处理，提交到存储引擎，攻击者通过读取存储引擎的展示路径，持久攻击
 
 ### 防御
 
+- 1.限制输入（来源）
+  - 前后端同时校验数据长度、类型、格式是否符合预期
+  - 始终过滤嵌入内容，如iframe object embed，土建始终过滤可执行代码，如script css中expression表达式和behavior属性
+  - 建立黑白名单，过滤不需要的标签、属性，内容或者只保留符合预期的项目
+  - 在代理端、 服务器端、CDN 边缘节点、Web 服务器端、后台脚本端建立并维护 WAF 规则库或者购买相应安全防护服务，拦截以下请求：
+    - 请求行：请求头，请求体包含敏感、恶意、垃圾内容
+    - 请求来源：如 IP，用户代理，地区，代理 IP，Origin，Referer，Cookie，帆布指纹等来源标识无法相互印证，被伪造，已被标记为高风险或命中黑名单
+    - 请求行为：如请求频率过高，短期大量请求敏感路径和参数，停留时间、请求总数、请求历史记录不符合真实用户，频繁索取权限，读取敏感数据，一次性 token 被重复使用，不回应验证码，验证问答，或多次验证失败
+  - 转义所有UGC（用户生成内容），例如将HTML中预留字符转换为字符实体
+- 2.限制输出（渲染）
+  - 始终避免输入内容作为HTML渲染
+    - 避免使用 .innerHTML .outerHTML 和 document.write() document.writeln()
+    - 避免在模板渲染引擎支持的模板中使用 {{{}}} 标签
+    - 避免在框架，如 React 中使用 dangerouslySetInnerHTML={ {__html:''}} 和 Vue 中使用 v-html 等
+    - 避免使用内联方式，添加事件监听属性，推荐使用addEventListener()
+    - 推荐使用 .innerText 或 .textContent 设置内容，属性直接操作 DOM 属性节点
+  - 根据输入内容的渲染位置作相应的限制
+    - HTML解析环境
+      - 范围：HTML标签、HTML属性
+      - 限制：将HTML预留字符转换为字符实体（如`<`转换为`&lt`;）
+    - JS解析环境
+      - 范围：script标签、事件属性
+      - 将\添加额外\转义，除字母及数字外，charCode小于等于127的字符使用\x+16进制进行编码，大于127的使用Unicode进行编码
+    - URL解析环境
+      - 范围：href、src、srcset属性
+      - 限制：使用encodeURI转义非URL保留字符，Mark字符和大小写字母数字以外字符
+  - 避免远程执行代码
+    - 避免在 Web 端使用 eval() 和 new Function() 执行远程代码
+    - 避免在 Extension 端使用 chrome.tabs.executeScript({code: '...'}) 和 chrome.scripting.executeScript({code: '...'}) 执行远程代码
+    - 推荐将所有远程代码（JS / Webassembly / CSS） 下载到本地使用
+  - 使用黑白名单渲染
+    - 根据上下文，只渲染需要的标签和属性，过滤危险标签和属性，转义需要但存在风险的标签和属性。例如，前后端都是 JavaScript 可以通过 js-xss 库实现
+- 鉴权
+  - 限制Cokkie访问
+    - 设置 Secure 属性，声明 Cookie 只能通过 HTTPS 协议传输，依然有可能通过访问客户端硬盘读取
+    - 设置 HttpOnly 属性，声明 Cookie 只对服务端会话可用，无法通过Document.cookie 访问，有助于缓解依赖此接口的 XSS 的攻击
+    - 设置 SameSite 属性
+      - 值为 Lax 时，当前网页的 top.location.href 与请求 URL 不同域时，除链接、预加载请求、GET表单外，不发送 Cookie
+      - 值为 Strict 时，当前网页的 top.location.href 与请求 URL 不同域时，始终不发送 Cookie
+    - 使用预防点击劫持的方法，禁止网页被嵌入，或者嵌入时弹出空白层禁止用户操作
+  - 配置CSP安全内容策略
+    - 配置 style-src script-src img-src connect-src workder-src manifest-src 等的 self 策略，只允许加载同源文件，与同域 URL 通信
+    - 配置 script-src
+      - 避免使用 unsafe-inline 允许内联 `<script>` 和事件监听函数
+      - 避免使用 unsafe-eval 允许使用 eval Function setTimeout setInterval 函数
+      - 推荐使用 nonce-{token} 和 {hash} 策略，只允许 token 或 hash 一致的 `<script>` 标签执行
+  - 与预防CSRF的防御中的方法组合使用，避免XSS+SCRF夸大攻击
+    - 校验 Referer
+    - 校验 token
+      - 前端生成令牌：混淆前端计算 token 的代码。计算算法容易被破解
+      - 令牌同步模式：将 token 计算放入后端，前端只读取 token 值。容易被盗用
+      - 令牌同步模式增强：将 token 计算放入后端，并绑定用户唯一标识符及使用环境。前端只读取 token 值，该 token 只能由绑定用户在指定环境中使用，一次性或自动过期。依然有破解的可能，容易误伤正常用户
+    - 验证码、验证问答、验证语音、验证图片、生物识别等
+      - token 校验的必要补充，在 token 校验失败时，避免影响用户，要求其验证
+        - 一般操作，验证通过，在一定时间，一定次数内，不再重复验证
+        - 敏感数据，风险操作，一个请求，一次验证
+- 业务侧
+  - 开发者
+    - 建立网址安全云库或使用第三方的 API，禁止用户访问仿冒、钓鱼、恶意网站，对未知安全的网址提示用户不要输入敏感信息
+    - 建立内容安全监控平台，深度学习大数据，定义参数，预测热门内容传播模型。对不符合传播规律，短期内异常传播的内容进行二次审查，减少 XSS 蠕虫、钓鱼的内容传播
+  - 用户
+    - 推荐用户使用支持沙箱运行的现代浏览器，严格限制恶意脚本能够访问的内容，缩小被攻击时影响范围
+    - 推荐用户使用带有 XSS Filter 的浏览器，如 Google Chrome
+    - 推荐用户安装防病毒软件或者启用浏览器的安全功能，拦截仿冒、钓鱼、恶意网站
+
 ## 什么是 CSRF ，如何防范 CSRF
+
+### 定 义
+
+CSRF，跨站请求伪造，英文全称为 Cross-site request forgery
+
+盗用用户身份的唯一标识符，冒充用户，伪造来源，模拟用户行为，执行未经其授权的的操作
+
+### 分 类
+
+- 基于 Cookie 的 CSRF
+  - 通过 XSS 漏洞，在要攻击页面，注入 Script 脚本，通过 document.cookie 获取用户 Cookie，通过设置可有限跨域标签的属性，如 `<img>` 的 src 属性，或 `<iframe>`的 src 属性， 或`<link>` 的 href 属性等，以及通过 `<embed>` `<object>` 的 src 属性和引入插件自身的漏洞，将 Cookie 发送给第三方网站
+  - 通过 XSS 漏洞，在要攻击页面，注入 Script 脚本，同域下通过 XHR Fetch 或上述设置标签属性的方式，发起恶意请求
+  - 通过 XSS 漏洞，在要攻击页面所在域的其它存在漏洞的页面，注入 Script 脚本，通过 `<iframe>` 嵌入要攻击页面，通过 contentDocument.cookie 获取 Cookie，通过可有限跨域标签的属性、插件属性或漏洞，将 Cookie 发送给第三方
+- 基于 Token 的 CSRF
+  - Token 由前端生成：尝试使用第三方工具或者浏览器的控制台还原混淆后的代码。使用 Tampermonkey 或自行开发 Extension，注入 Script，恢复控制台的使用，清除或覆盖随机注入 Debugger 等其它干扰代码调试的定时器和 Observer。最终还原 Token 生成算法
+  - Token 由后端生成：
+    - 抓取网页源代码，使用正则或 DOM 解析（如 JSDOM 或 cheerio）方式获取 Token
+    - 使用无头浏览器，如 PhantomJS 或 Headless Chrome 等模拟用户访问获取 Token
+    - 使用 Webview 嵌入 Token 所在网页，通过 Webview API 获取 Token
+- 基于帆布指纹的 CSRF
+  - 对抗 Canvas 指纹
+    - 重写 HTMLCanvasElement.prototype 的方法，伪造用户的 Canvas 指纹
+  - 对抗浏览器指纹
+    - 使用虚拟机 + 浏览器，仿造用户环境
+    - 自行编译浏览器或使用候鸟浏览器等，伪造关键特征，如用户代理，系统、分辨率，WebRTC 指纹等
+- 基于用户行为的 CSRF
+  - 使用无头浏览器或 Webview，在客户端隐藏打开网页，模拟用户行为发起请求
+  - 使用模拟器或按键精灵等软件，录制或开发脚本，在客户端模拟用户行为发起请求
+
+### 防 御
+
+- 基于 Cookie 的防御
+  - Cookie 设置 Secure 属性，声明允许 Cookie 通过 https 传输
+  - Cookie 设置 HttpOnly 属性，声明 JavaScript 无法访问 Cookie
+  - Cookie 设置 SameSite 属性
+    - 值为 Lax 时，当前网页的 top.location.href 与请求 URL 不同域时，除链接、预加载请求、GET表单外，不发送 Cookie
+    - 值为 Strict 时，当前网页的 top.location.href 与请求 URL 不同域时，始终不发送 Cookie
+  - 替代 Cookie
+    - 使用 Storage API 替代替存储原来需要 Cookie 存储到客户端的数据
+    - 使用 token 替代 Cookie 作身份验证
+- 基于来源的防御
+  - 来源可以被伪造，且不同浏览器的实现存在差异，部分真实用户请求来源也被修改，容易误伤，故不推荐
+    - 校验 Origin，如果 Origin 不为空，判断 Origin 是否合法
+      - IE 11 跨站请求，Origin 为空
+      - 302 重定向请求，Origin 为空
+      - 使用 Curl 或在非浏览器环境或特殊浏览器，自定义 HTTP 头，可伪造 Origin
+      - 用户的 HTTP 请求被网关或代理修改，可伪造 Origin
+    - 校验 Referer，如果 Referer 不为空，判断 Referer 是否合法
+      - IE 6/7 使用 window.location.href 或 window.open 跳转或打开 URL，Referer 为空
+      - HTTPS 到 HTTP， Referer 为空
+      - 插件跳转到网页，Referer 不确定
+      - 使用 Curl 或在非浏览器环境或特殊浏览器，自定义 HTTP 头，可伪造 Referer
+      - 用户的 HTTP 请求被网关或代理修改，可伪造 Referer
+      - 用户出于正常需求，直接打开请求链接，或者使用第三方软件，如下载软件打开请求链接，Referer 为空
+- 基于 Token 的防御
+  - Token 的生成：后端生成随机密钥，输出到前端，前端获取密钥，按某算法生成 Token
+    - 抓取源代码，仅能获取随机密钥，无法获得 Token
+    - 还原了前端 Token 计算算法，依然需要获取随机密钥
+  - Token 的使用：前端将帆布指纹发给后端，后端生成的随机密钥，绑定该指纹，并设置最大使用次数和过期时间
+    - Token 与帆布指纹一一对应，从 A 环境获取的 Token，无法在 B 环境使用
+- 基于帆布指纹的防御
+  - 基于 AudioContext 声音指纹，生成跨浏览器帆布指纹，减少对容易伪造的参数依赖
+  - 获取和使用 Token 时，都重新获取指纹，要求获取 Token 的指纹和使用 Token 的指纹一致
+- 基于 CSP 内容安全策略的防御
+  - 配置 style-src script-src img-src connect-src workder-src manifest-src 等的 self 策略，只允许加载同源文件，与同域 URL 通信
+  - 配置 script-src
+    - 避免使用 unsafe-inline 允许内联 `<script>` 和事件监听函数
+    - 避免使用 unsafe-eval 允许使用 eval Function setTimeout setInterval 函数
+    - 推荐使用 nonce-{token} 和 {hash} 策略，只允许 token 或 hash 一致的 `<script>` 标签执行
+- 基于验证码的防御
+  - 对于能够获取的用于验证的信息有限，校验失败但可能存在误伤的请求，使用验证码、验证问题、图形验证、生物识别的方式，要求请求者手动验证合法性
+    - 验证方式存在局限性
+      - 图形验证码：可被图像识别，会使用软件截屏，传递给打打码平台人工验证
+      - 验证问题：可建立验证问题和答案，会将问题传递给平台人工回答
+      - 图形验证（标记图片、文字）：用户体验不佳
+      - 图形验证改进版（旋转、点击图片，或拖拽滑块到空缺处）：基于操作方- 向、轨迹、速度，用户操作容易，体检较好
+      - 生物识别：存在隐私风险，影响用户信任度
+    - 一般操作，验证通过，在一定时间，一定次数内，不再重复验证
+    - 敏感数据，风险操作，一个请求，一次验证
