--- a/全栈/项目管理-数据库.md
+++ b/全栈/项目管理-数据库.md
@@ -4,12 +4,157 @@
 
 ## 您使用过哪些文档管理工具？
 
+### API 接口协作管理工具
+
+- Swagger
+- Spring
+- Apizza
+
+### 文档协作工具
+
+- 石墨文档
+- 有道笔记 + 有道云协作
+- 印象笔记
+
+### 自动文档生成
+
+- apiDoc：根据 API 描述，自动生成文档
+- jsDoc：根据 JS 注释，自动生成文档
+
 ## 对比 Git 和 SVN？
+
+- 架构
+  - git
+    - 分布式 本地克隆版本库
+    - 无网络依然可以操作本地分支，提交文件，查看历史记录
+  - svn
+    - 集中式 代码一致性高
+    - 依赖网络
+- 存储
+  - git
+    - 按元数据，即描述文件的数据
+  - svn
+    - 按文件
+- 分支
+  - git
+    - 移动指针创建切换快
+  - svn
+    - 拷贝目录
+- 权限
+  - git
+    - 经常按项目配置
+    - 更适合开源
+  - svn
+    - 经常按照目录配置
+    - 更适合内部开发
 
 ## 什么是敏捷开发？
 
+### 定义
+
+- 以用户需求为核心，迭代、循序渐进的开发方式
+- 大项目分成多个子项目，相互关联，可独立运行。整个开发的过程中，软件保持可用的特点
+- 增量开发，快速变化相应
+  - 对比瀑布开发，客户可以很快看到基础版本，更新需求做出相应
+- 优先实现最低成本，最大收益需求
+- 软件为目标，高效沟通>图>表
+
+[微软敏捷开发文档](https://docs.microsoft.com/zh-cn/devops/plan/what-is-agile-development)
+
+[敏捷开发wiki](https://zh.wikipedia.org/wiki/%E6%95%8F%E6%8D%B7%E8%BD%AF%E4%BB%B6%E5%BC%80%E5%8F%91#%E4%BB%B7%E5%80%BC%E8%A7%82)
+
 ## 敏捷开发的原则是什么？
 
-## 什么是乐观锁，什么是悲观锁
+- 快速迭代
+  - 大项目分成小项目，大版本分成小版本
+  - 需求、开发、测试更加简单快捷
+- 需求分析
+  - 产品、测试、开发，包括运营等参与，明确需求优先级，增强参与感
+- 需求文档
+  - 以用户故事方法编写需求文档
+  - 需求文档关注的是需求而不是技术
+- 产品原型
+  - 用草图和原型直观的描述用户界面
+- 沟通
+  - 每日站会，面对面沟通
+- 测试优先
+  - 开发前明确测试目标，范围，顺序和关键点
+  - 撰写测试用例并评审
+  - 推荐测试驱动开发的技术实践
+    - 先写单元测试用例再开发
+    - 先需求在优化性能、可读性和可维护性
+
+## 什么是乐观锁，什么是悲观锁 [简书](https://www.jianshu.com/p/d2ac26ca6525)
+
+并发控制
+
+- 需要保证并发情况下的数据准确性
+- 保证一个用户的工作不会对另一个用户的工作产生不合理的影响
+- 避免
+  - 脏读：一个事务看见另一个事务未提交的数据
+  - 不可重复读：一个事务两次读取到的数据内容不同，另一事务修改了数据
+  - 幻读：一个事务两次读取到的数据条数不同，另一事物增删了数据
+
+实现并发控制的两种主要手段：乐观并发控制和悲观并发控制
+
+- 乐观锁：多读 适用
+  - 仅在数据提交更新时，检测数据冲突。冲突时，采用竞争机制
+  - 依靠数据本身来保证数据正确性，如添加字段 version
+- 悲观锁：多写 适用
+  - 共享锁（读锁）：多个事务同一数据共享锁，只读不可写
+  - 排他锁（写锁）：一次仅一个事务可读写数据
+  - 依赖数据库的锁机制，如 MySQL：select ... for update
 
 ## 什么是事务
+
+- 定义
+
+  访问并可能更新数据库中数据项的一个程序执行单元（Uint）
+
+  一条 SQL、一组 SQL 和 整个程序都可以是事务
+
+- 特点
+
+  - 原子性（atomicity）：不可分割，要么都做，要么都不做
+  - 一致性（consistency）：一个一致性状态变到另一个一致性状态
+  - 隔离性（isolation）：一个事务的执行不能被其他事务干扰，操作和数据使用不依赖和干扰其它并发事务
+  - 持久性（durability）：提交后的改变永久生效。不受故障或其它操作影响
+
+- 在Mysql中使用事务
+
+  ```sql
+
+  # 关闭自动提交
+
+  SET autocommit = 0
+
+  # 或者开始一个事务
+
+  BEGIN
+  若干SQL语句
+
+  # 提交事务
+
+  COMMIT 对数据库所有修改都永久生效
+  若干SQL语句
+
+  # 回滚事务
+
+  ROLLBACK 结束当前事务，撤销所有未提交的更改
+
+  # 设置保存点
+
+  SAVEPOINT id 创建名为 id 的保存点
+
+  # 回滚事务到保存点
+
+  ROLLBACK TO id 把事务回滚到保存标记点
+
+  # 设置事务的隔离级别
+
+  SET TRANSACTION InnoDB 存储引擎提供事务的隔离级别有
+  (1) READ UNCOMMITTED
+  (2) READ COMMITED
+  (3) REPEATABLE READ
+  (4) SERIALIZABLE 
+  ```
