--- a/js/03-ES6.md
+++ b/js/03-ES6.md
@@ -7,17 +7,111 @@
 ### ES6
 
 - let 和 const
+  - const 本质上是传递的值不可更改，但如果传递的是一个引用类型，可以通过内存地址修改内部属性
+  - let 和 const 定义的变量名不能重复声明，var 可以
+  - var 有变量提升；let 变量在实例化之前不能被访问，不存在变量提升
+  - var 生命的变量保存在window中，let/const声明的变量保存在variables_中
+  - 块级作用域
+    - let/const 声明的变量在块级作用域中有效
+    - const 声明的变量在块级作用域中无效
+    - for 循环也有块级作用域
+      - for 循环使用 let
+      - for...of 使用 const
+  - 使用优先级 const=>let=>var
 - Promise
 - Class
 - 箭头函数
+  - 箭头函数是没有显式原型的(能通过new调用)
+  - 不绑定this
+  - 没有arguments
 - 函数参数默认值
-- 模板字符串
+  - `function foo(m, n = value) { ... }`
+
+  ```js
+  // 对象参数和默认值以及解构
+  function printInfo({name, age} = {name: "why", age: 18}) {
+    console.log(name, age)
+  }
+
+  printInfo({name: "kobe", age: 40})
+
+  // 另外一种写法
+  function printInfo1({name = "why", age = 18} = {}) {
+    console.log(name, age)
+  }
+
+  printInfo1()
+  ```
+
+  - 默认值之后的参数foo.length不计入
+- [模板字符串](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Template_literals)
+  - 标签模版字符串(react中css编写)
+    - 第一个参数依然是模版字符串中的整个字符串，只不过被切成多块放入一个数组中
+    - 斯二个参数是模板字符串中第一个`${}`
 - 解构语法
-- 展开语法
+  - 数组解构: 按照索引依次复制
+    - `const [item1, item2] = [1, 2]`
+    - 解构部分元素`const [, item] = [1, 2]`
+    - 后面元素放入数组`const [item1, ...newArr] = [1, 2, 3]`
+    - 解构的默认值 `const [item1, item2, item3 = 3] = [1, 2]`
+  - 对象解构: 按照key解构
+    - 起别名 {name: aliasName = 'lee'} = {user: 'zhang'}
+- [展开语法](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Operators/Spread_syntax)
   - 构造数组，调用函数时，将数组表达式或者string在语法层面展开
-- 对象属性缩写
-  - 键名键值相同
-  - 函数省略function
+  - 在构造字面量时，将对象按照key-value的方式进行展开(ES9/ES2018)
+  - 展开语法进行的是**浅拷贝**
+- 对象字面量的增强写法
+  - 属性的增强写法
+  - 方法的增强写法
+  - 计算属性名 `[ computed prop ]`
+- 剩余参数 rest parameters
+  - 如果最后一个参数是 ... 为前缀的，那么它会将剩余的参数放到该参数中，并且作为一个数组
+  - 与arguments区别
+    - 推荐替代 arguments
+    - 剩余参数只包含了那些没有对应形参的实参，而arguments包含了所有参数
+    - 剩余参数是数组，arguments是类数组
+- 表示数值的方式
+  - 十进制 100
+  - 二进制 0b100 => 8
+  - 八进制 0o100 => 64
+  - 十六进制 0x100 => 256
+- Symbol
+  - ES6之后，对象属性名可以是一个字符串，也可以是一个Symbol类型
+  - `const s2 = Symbol()` `obj[s2] = 'value'` `Object.defineProperty()`
+  - `Object.key()`获取不到Symbol值
+  - `Object.getOwnPropertySymbol()` `Object.getOwnPropertiesSymbol()`
+  - `Symbol.for(description)` `Symbol.keyFor()`
+- Set 集合中的数据不重复 **强引用**
+  - 创建`const set = new Set()`
+  - 属性size
+  - 方法
+    - `set.add(value)`
+    - `set.delete(value)`
+    - `set.has(value)`
+    - `set.clear()`
+    - `forEach()` `for...of...`
+  - 作用：
+    - 数组去重 `const newArr = new Set(arr); const newArr = Array.from(newArr) or [...newArr]`
+- WeakSet: 只能存放对象数据类型，不能存放基本数据类型；WeakSet对元素的引用是**弱引用**，如果没有其他引用对某个对象进行引用，那么GC可以对该对象进行回收;
+  - 没有size属性
+  - 方法
+    - add has delete 不能进行遍历
+  - 应用场景
+    - 见课件
+- Map 可以使用对象作为属性值
+  - 构造方法创建new Map([entries])
+  - 属性size
+  - 方法：
+    - set
+    - delete
+    - has
+    - get
+    - clear
+    - forEach for...of...遍历
+- WeakSet 属性值是对象 弱引用
+  - 没有size属性
+  - 不能遍历，没有clear方法
+  - 使用场景**Vue3相应式**
 
 ### ES7
 
