--- a/js/03-ES6.md
+++ b/js/03-ES6.md
@@ -58,7 +58,7 @@
     - 起别名 {name: aliasName = 'lee'} = {user: 'zhang'}
 - [展开语法](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Operators/Spread_syntax)
   - 构造数组，调用函数时，将数组表达式或者string在语法层面展开
-  - 在构造字面量时，将对象按照key-value的方式进行展开(ES9/ES2018)
+  - 在构造字面量时，将对象按照key-value的方式进行展开 *(ES9/ES2018)*
   - 展开语法进行的是**浅拷贝**
 - 对象字面量的增强写法
   - 属性的增强写法
@@ -115,24 +115,30 @@
 
 ### ES7
 
-- [includes()](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Array/includes)
+- [arr.includes(valueToFind, [fromIndex])](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Array/includes)
+  - 另一种方法`indexOf` 不包含的话返回-1
+  - `indexOf`不能判断`NaN`, `includes` 可以
 - 指数操作符**
+  - Math.pow(3, 3) === 3 ** 3
 
 ### ES8
 
 - async、await
 - [OBject.values()](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Object/values)
 - [Object.entries()](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Object/entries)
+  - 传入一个对象，获取entries数组`[[key, value], []...]`
 - [Object.hasOwnPropertyDescriptors()](https://zh.javascript.info/property-descriptors)
-- 填充字符串到指定长度 padStart padEnd 语法str.padEnd(targetLength [, padString])
+- `String paddig`填充字符串到指定长度 padStart padEnd 语法`str.padEnd(targetLength [, padString])`
+  - 应用：填充身份证号前几位星号
 - SharedArrayBuffer 和 [Atomics](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Atomics)，共享内存位置读取和写入
 - 函数最后参数有尾逗号，与数组和对象保持一致
+- `Object.value()` `Object.keys()`
 
 ### ES9
 
 - 异步迭代for await (let i of array)
 - Promise.prototype.finally()
-- 展开语法
+- 对象展开语法
   - 构造字面量对象时，将对象按照键值对展开，克隆属性或者浅拷贝
 - 非转义序列的模板字符串
 - 正则表达式
@@ -143,43 +149,45 @@
     console.log(match.groups.year) // 2022
     ```
 
-- 反向断言
-  - 肯定反向断言
+  - 反向断言
+    - 肯定反向断言
 
-  ```js
-  const match = /(?<=\D)\d+/.exec('a123')
-  console.log(match[0]) // 123
-  ```
+    ```js
+    const match = /(?<=\D)\d+/.exec('a123')
+    console.log(match[0]) // 123
+    ```
 
-  - 否定反向断言
+    - 否定反向断言
 
-  ```js
-  const match = /(?<!\d)\d+/.exec('a123')
-  console.log(match[0]) // 123
-  ```
+    ```js
+    const match = /(?<!\d)\d+/.exec('a123')
+    console.log(match[0]) // 123
+    ```
 
-  - dotAll 模式：增加  `s` 修饰符，让 `.` 可以匹配换行符
-  - Unicode 转义：新的匹配符合 Unicode 某属性所有字符写法 `\p{...}` 和 `\P{...}`
+    - dotAll 模式：增加  `s` 修饰符，让 `.` 可以匹配换行符
+    - Unicode 转义：新的匹配符合 Unicode 某属性所有字符写法 `\p{...}` 和 `\P{...}`
 
-  ```js
-  /^\p{Number}+$/u.test('①②③¼½¾¹²³ⅠⅡⅢ') // 匹配各种数字
-  /^\P{Number}+$/u.test('Ab.<(中文)>') // 匹配非数字
-  ```
+    ```js
+    /^\p{Number}+$/u.test('①②③¼½¾¹²³ⅠⅡⅢ') // 匹配各种数字
+    /^\P{Number}+$/u.test('Ab.<(中文)>') // 匹配非数字
+    ```
 
-  - 非转义序列的模版字符串
-    - `\u` unicode转义
-    - `\x` 十六进制转义
-    - `\` 后跟数字，八进制转义
+    - 非转义序列的模版字符串
+      - `\u` unicode转义
+      - `\x` 十六进制转义
+      - `\` 后跟数字，八进制转义
 
 ### ES10
 
 - JSON.stringify()
   - \ud800到 \udfff 单独转换，返回转义字符串
   - \ud800到 \udfff 成对转换，对应字符存在，返回字符。不存在，返回转义字符串
-- flat 和 flatMap
-- trimStart 和 trimEnd
+- `arr.flat([depth])` 和 flatMap
+  - 数组降维 数组先映射再降维
+- `str.trimStart()` 和 `str.trimEnd()` 去除首尾空格
 - Object.fromEntries() 传入键值对列表，返回键值对对象
-- Symbol.prototype.description
+- 应用：URL查询字符串转对象
+- `Symbol.prototype.description(symbol)`
 
   ```js
   const sym = Symbol('description')
@@ -188,13 +196,13 @@
 
 - `String.prototype.matchAll` 返回包含所有匹配正则表达式和分组捕获结果的迭代器
 - `Function.prototype.toString()` 返回精确字符，包括空格和注释
-- 修改  `catch` 绑定
-- 新基本数据类型  `BigInt`
+- 修改 `catch` 绑定
 - `globalThis`
 - `import()`
 
-### ES11
+### ES11 commonjs-53:36
 
+- 新基本数据类型 `BigInt`
 - String.prototype.replaceAll(old,new)
 - Promise.any()
   - 一个resolve返回第一个resolve状态
