--- a/js/03-ES6.md
+++ b/js/03-ES6.md
@@ -197,25 +197,36 @@
 - `String.prototype.matchAll` 返回包含所有匹配正则表达式和分组捕获结果的迭代器
 - `Function.prototype.toString()` 返回精确字符，包括空格和注释
 - 修改 `catch` 绑定
-- `globalThis`
-- `import()`
 
-### ES11 commonjs-53:36
+### ES11
 
 - 新基本数据类型 `BigInt`
-- String.prototype.replaceAll(old,new)
-- Promise.any()
+  - 见test.js
+- 可选链 Optional chain
+- Promise.allSettled()
   - 一个resolve返回第一个resolve状态
   - 所有reject反悔请求失败
-- WeakRefs
-  - 通过WeakMap WeakSet创建
-  - 创建对象的弱引用：该对象可被回收即使他仍被引用
 - 逻辑运算赋值表达式
   - ||= `a ||= b // 若 a 不存在，则 a = b`
   - &&= `a &&= b // 若 a 存在，则 a = b`
-  - ??= `a ??= b // 若 a 为 null 或 undefined，则 a = b`
+  - 空值合并运算符 ??
+    - ??= `a ??= b // 若 a 为 null 或 undefined，则 a = b`
   - ?. `访问对象未定义属性`
   - 数字分隔符_ `123_345_789`
+- `globalThis`: 不同环境均适用
+  - web window
+  - node global
+- `import()` 动态导入
+- for in 标准化
+
+### ES12
+
+- String.prototype.replaceAll(old,new)
+- [FinalizationRegister(callback)](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/FinalizationRegistry)
+- WeakRefs commonjs-02:08:30
+  - 通过WeakMap WeakSet创建
+  - 创建对象的弱引用：该对象可被回收即使他仍被引用
+- Promise.all()
 
 ## == === Object.is()的区别
 
